<resources>
    <string name="BASU_URL">http://marstechstudio.com/img-msd/a2.png</string>
    <string name="app_name">MusicDownload_TTA</string>
    <string name="download_logo">DOWNLOAD MANAGER</string>
    <string name="Songname_default">Love the way you lie</string>
    <string name="SongSingger_default">Alex Matlac</string>
    <string name="LogoPlay">Now Playing</string>
    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="default_time">00:00</string>
    <string name="default_time_end">Loading..</string>
    <string name="default_time_language">Eng</string>
    <string name="default_genres">Dubstep</string>
    <string name="cancel">Cancel</string>
    <string name="searchresults">Recently search results</string>
    <string name="default_hint_search">Search</string>
    <string name="country">Vietnam</string>
    <string name="country2">UK</string>
    <string name="addToList">Add To PlayList</string>
    <string name="downloadsong">Download Song</string>
    <string name="Playlist">Playlist</string>
    <string name="PlaylistName">Morning Vibe</string>
    <string name="FavoriteSongs">Favorite Songs</string>
    <string name="connect_internet">Please check your Internet connection!</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="createPlayList">Create new playlist</string>
    <string name="updatePlayList">Rename playlist</string>
    <string name="searchMusic">Search Music</string>
    <string name="wifiOnly">Wifi</string>
    <string name="delete_title">Delete title</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="retry">Retry</string>
    <string name="view">View</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="download_eta_hrs">hours</string>
    <string name="download_eta_min">p</string>
    <string name="download_eta_sec">second</string>
    <string name="download_speed_mb">/mb</string>
    <string name="download_speed_kb">kb</string>
    <string name="download_speed_bytes">byte</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="start">Start</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="start_fetching">Click start to start fetching game files.</string>
    <string name="fetch_started">Fetching Game Files…</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="fetch_failed">An error occurred whiles fetching the game files.</string>
    <string name="reset">RESET</string>
    <string name="single_download_demo">Single Download Demo</string>
    <string name="download_list_demo">Download List Demo</string>
    <string name="game_file_download_demo">Game File Download Demo</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="file_server">FETCH FILE SERVER DEMO</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="failed_multi_enqueue">Failed Multi Enqueue Demo</string>
    <string name="multi_fragment">MULTI FRAGMENT DEMO</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="privacy_terms"><![CDATA[Privacy & Terms]]></string>
    <string name="share_with_friend">Share with Friend</string>
    <string name="feedback">Feedback</string>
    <string name="rating_app">Rating App</string>
    <string name="remove_downloaded_song">Remove Downloaded Song</string>
    <string name="remove_downloaded">Remove Download</string>
    <string name="pause_downloaded">Pause Download</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="music">MUSIC</string>
    <string name="downloader">DOWNLOADER</string>
    <string name="todo">TODO</string>
    <string name="top_ranking">Top Ranking</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="create">Create</string>
    <string name="no_i_want_to_wait">No I want to wait</string>
    <string name="no_connection">No connection</string>
    <string name="do_you_want_to_discover_what_you_have_downloaded">Do you want to discover what you have downloaded?</string>
</resources>