<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="356dp"
    android:background="@drawable/background_downloading"
    android:layout_height="401dp">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="191dp"
        android:layout_height="113dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/not_connect_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/no_connection"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/do_you_want_to_discover_what_you_have_downloaded"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <View
        android:id="@+id/btnGoToDownloadedSong"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_go_to_offline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="16dp"
        android:textStyle="normal"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToDownloadedSong" />
</androidx.constraintlayout.widget.ConstraintLayout>