<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"

        android:layout_width="match_parent"
        android:layout_height="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1B1A21">

            <TextView
                android:id="@+id/tcTitleCreateView"
                android:text="@string/createPlayList"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textFontWeight="700"
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="39dp"
                android:background="@drawable/border_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tcTitleCreateView" />

            <EditText
                android:id="@+id/edtNamePlayList"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:maxHeight="48dp"
                android:maxLines="1"
                android:maxWidth="200dp"
                android:singleLine="true"
                android:background="@android:color/transparent"
                android:hint="@string/enter_playlist_name"
                android:textColor="@color/text_gray"
                android:textColorHint="@color/text_gray"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <TextView
                android:id="@+id/tvAddPlayList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textColor="@color/color_btnPlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvCancelAddPlayList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/tvCancelAddPlayList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/text_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAddPlayList"
                app:layout_constraintTop_toBottomOf="@+id/view4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>