<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050810"
    tools:context=".view.activity.PlayActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayingMusic"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:scrollbars="horizontal"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btnBackPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogoPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto"
            android:text="@string/LogoPlay"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgShowBottomPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/more"
            android:src="@drawable/ic_baseline_more_horiz_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imgPlaying"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/LogoPlay"
            android:scaleType="centerCrop"
            android:src="@drawable/demo_img_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvLogoPlay" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/imgae_shadow_bottom"
            app:layout_constraintBottom_toBottomOf="@+id/imgPlaying"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/imgae_shadow_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgPlaying" />

        <TextView
            android:id="@+id/tvSongNameNowPlaying"
            android:layout_width="300dp"
            android:maxWidth="300dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Songname_default"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgPlaying"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/imgNextSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="104dp"
            android:contentDescription="@string/more"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_skip_next_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/viewBntPlaying"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeEnd" />

        <View
            android:id="@+id/viewBntPlaying"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/backgroundplay2"
            android:layout_marginTop="26dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart" />

        <ImageView
            android:id="@+id/imgPlayOrPasuePlaying"
            android:layout_width="35dp"
            android:layout_height="37dp"
            android:contentDescription="@string/more"
            android:src="@drawable/ic_baseline_pause_24"
            app:layout_constraintBottom_toBottomOf="@+id/viewBntPlaying"
            app:layout_constraintEnd_toEndOf="@+id/viewBntPlaying"
            app:layout_constraintStart_toStartOf="@+id/viewBntPlaying"
            app:layout_constraintTop_toTopOf="@+id/viewBntPlaying" />

        <ImageView
            android:id="@+id/imgPreviousSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="104dp"
            android:contentDescription="@string/more"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_skip_previous_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/viewBntPlaying"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart"/>

        <TextView
            android:id="@+id/tvSingerSongNowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/SongSingger_default"
            android:textColor="@color/text_gray"
            android:textFontWeight="400"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSongNameNowPlaying" />

        <ImageView
            android:id="@+id/imgPlayFavorite"
            android:contentDescription="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="-8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/imgPlaying"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/seekBarNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="6dp"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintTop_toBottomOf="@+id/tvSingerSongNowPlaying" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/default_time"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarNowPlaying" />
        <TextView
            android:id="@+id/tvTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/default_time_end"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarNowPlaying" />

        <ImageView
            android:id="@+id/imgPlayingSuffer"
            android:contentDescription="@string/more"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:src="@drawable/randmusic"
            android:layout_marginTop="52dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart"/>
        <ImageView
            android:id="@+id/imgPlayingRepeat"
            android:contentDescription="@string/more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imgrepeat"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/viewloadingPlaying"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/teal_200"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ProgressBar-->
<!--        android:id="@+id/processBarPlay"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="80dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/layoutPlayingMusic"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>