<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="370dp"
    android:background="@color/black"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_gray"
        app:cardCornerRadius="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="#1B1A21"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgBottomSheetSong"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demo_img_download" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvSongBtMusic"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto"
                android:text="@string/Songname_default"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/tvSingerBtMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/SongSingger_default"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSongBtMusic" />


            <View
                android:id="@+id/viewRemoveSong"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bkg_radius_corner_gray"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSingerBtMusic" />

            <ImageView
                android:id="@+id/imageviewRemoveSong"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/delete"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewRemoveSong"
                app:layout_constraintStart_toStartOf="@+id/viewRemoveSong"
                app:layout_constraintTop_toTopOf="@+id/viewRemoveSong" />

            <TextView
                android:id="@+id/tvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/remove_downloaded"
                android:textColor="@color/white"
                android:layout_marginLeft="14dp"
                android:textFontWeight="400"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewRemoveSong"
                app:layout_constraintStart_toEndOf="@+id/imageviewRemoveSong"
                app:layout_constraintTop_toTopOf="@+id/viewRemoveSong" />

            <View
                android:id="@+id/viewPauseDownloadSong"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="@dimen/radius_corner_8dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/bkg_radius_corner_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewRemoveSong"/>

            <ImageView
                android:id="@+id/imageviewPauseDownloadSong"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_pause_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/viewPauseDownloadSong"
                app:layout_constraintStart_toStartOf="@+id/imageviewRemoveSong"
                app:layout_constraintTop_toTopOf="@+id/viewPauseDownloadSong" />

            <TextView
                android:id="@+id/removeSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/pause_downloaded"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPauseDownloadSong"
                app:layout_constraintStart_toStartOf="@+id/tvDownload"
                app:layout_constraintTop_toTopOf="@+id/viewPauseDownloadSong" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>